src/corelib/tools/qcollator.cpp
@@ -254,7 +254,7 @@ bool QCollator::numericMode() const
 
     The default is locale dependent.
 
-    \note This method is not currently supported on Apple platforms or if Qt is configured to not use ICU on Linux.
+    \note This method is not currently supported if Qt is configured to not use ICU on Linux.
 
     \sa ignorePunctuation()
  */
